--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -1,16 +1,22 @@
 .sidebar{
-    flex: .2;
+    /* flex: .2; */
     /* display: none; */
     background-color: green;
-
+   
     height: 100%;
-    /* width: 0; */
-    /* position: fixed; */
+    /* width: 0px; */
+    position: fixed;
     /* position: absolute; */
-    /* z-index: 1;
-    top: 50px;
-    left: 0; */
-    background-color: #011627;
+     z-index: 1;
+    /* top: 50px; */
+    /* left: 0; */
+    /* background-color: #120E43; */
+    background-color: rgba(255, 255, 255);
+      /* background-image: linear-gradient(rgba(185, 177, 177, 0.9), rgba(255, 255, 255, .8)),
+      url('https://images.unsplash.com/photo-1522441815192-d9f04eb0615c?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=564&q=80'); */
+      background-position: center;
+      background-size: cover;
+      background-attachment: fixed;
     overflow-x: hidden;
     transition: 0.5s;
    
@@ -26,7 +32,7 @@
     border-bottom: 1px solid rgba(256,256,256,.1);
     text-decoration: none;
     font-size: 15px;
-    color: #818181;
+    color: #0a0909;
     display: flex;
     align-items: center;
     transition: 0.3s;
@@ -38,8 +44,8 @@
   }
   
   .sidebar a:hover {
-    background-color: rgba(178, 230, 106, 0.4);
-    color: #fff;
+    background-color: rgba(207, 104, 78, 0.4);
+    color: rgb(0, 0, 0);
   }
   
   .sidebar .closebtn {
@@ -47,26 +53,29 @@
     top: 20px;
     right: 25px;
     border: none;
+    /* color: red; */
   }
-
   
 .sidebar-header{
   padding: 0;
   text-align: center;
   color: #fff;
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVoscQEF4Bw3ttLMWNxsUr2pijY9gU4as3OQ&usqp=CAU');
+  background: rgb(159, 165, 161);
+  /* background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVoscQEF4Bw3ttLMWNxsUr2pijY9gU4as3OQ&usqp=CAU'); */
   background-position: center;
+  /* background-image: url('https://images.unsplash.com/photo-1448518340475-e3c680e9b4be?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80'); */
+  /* background:rgba(0,0,0,.3); */
   background-size: cover;
 }
 .sidebar-header img{
-  width: 80px;
+  width: 70px;
   border-radius: 50%;
-  margin-top: 30px;
+  margin-top: 25px;
   margin-bottom: 15px;
 
 }
 
 .sidebar-header h6{
-   padding-bottom: 30px;
+   padding-bottom: 20px;
    font-size: 20px;
 }
