--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,16 @@
     padding: 0;
 }
 body{
-    background-color: rgb(19,54,76,.3);
+    background: #120E43;
+    /* background-image: url('https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1052&q=80'); */
+    /* background-image: url('https://images.unsplash.com/photo-1543286386-713bdd548da4?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');*/
+     /* background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .7)),
+     url('https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1052&q=80'); */
+
+  font-family: 'Roboto Mono',
+  monospace;
+  font-family: 'Ubuntu',
+  sans-serif;
+    font-weight: 100;
+    color: #fff;
 }
